--- a/test/fixtures/sites.yml
+++ b/test/fixtures/sites.yml
@@ -10,15 +10,22 @@ two:
   domain: MyString
   url: MyString
 
+
+
+
 # == Schema Information
 #
 # Table name: sites
 #
-#  id         :integer         not null, primary key
-#  name       :string(255)
-#  domain     :string(255)
-#  url        :string(255)
-#  created_at :datetime
-#  updated_at :datetime
+#  id                :integer         not null, primary key
+#  name              :string(255)
+#  domain            :string(255)
+#  url               :string(255)
+#  created_at        :datetime
+#  updated_at        :datetime
+#  post_title_xpath  :string(255)
+#  post_body_xpath   :string(255)
+#  post_xpath        :string(255)
+#  post_author_xpath :string(255)
 #
 
