--- a/test/fixtures/posts.yml
+++ b/test/fixtures/posts.yml
@@ -12,17 +12,19 @@ two:
 
 
 
+
 # == Schema Information
 #
 # Table name: posts
 #
-#  id         :integer         not null, primary key
-#  author     :string(255)
-#  topic_id   :integer
-#  url        :string(255)
-#  created_at :datetime
-#  updated_at :datetime
-#  title      :string(255)
-#  body       :string(255)
+#  id          :integer         not null, primary key
+#  author      :string(255)
+#  topic_id    :integer
+#  url         :string(255)
+#  created_at  :datetime
+#  updated_at  :datetime
+#  title       :string(255)
+#  body        :string(255)
+#  reply_count :integer
 #
 
